QDataStream: fix compilation with QT_DISABLE_DEPRECATED_BEFORE=0x0050F00

Fixes: QTBUG-81023
Change-Id: I0d56785d1fed2c4c8e0e87ccefb0b72b0ed3644a
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>